refactor: use native tool calls and recover from malformed model responses